--- a/shop/dianmian.html
+++ b/shop/dianmian.html
@@ -15,10 +15,6 @@
 <link rel="stylesheet" type="text/css" href="../static/cpts_1781_cqm/css/prettyPhoto.css">
 <!-- Fancybox -->
 <link href="../static/cpts_1781_cqm/css/jquery.fancybox.css" rel="stylesheet" type="text/css" media="screen">
-<link rel="stylesheet" href="../static/easyui/easyui.css" />
-<link rel="stylesheet" href="../static/easyui/icon.css"/> 
-<script type="text/javascript" src="../static/easyui/jquery.easyui.min.js"></script>
-<script type="text/javascript" src="../static/easyui/jquery.min.js"></script>
 </head>
 <body class="index page-index">
 <div id="site-holder">
@@ -75,6 +71,7 @@
 		</div>
 	</div>
 </div>
+<script type="text/javascript" src="../static/cpts_1781_cqm/js/jquery-1.9.0.min.js" ></script>
 <script type="text/javascript" src="../static/cpts_1781_cqm/js/jquery.cookie.js"></script>
 <script type="text/javascript" src="../static/cpts_1781_cqm/js/mobicom.custom.js"></script>
 <script>
